--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -8384,7 +8384,7 @@ h1, h2, h3, h4, h5,
       font-style: italic;
       color: transparent;
       -webkit-text-fill-color: transparent;
-      /* Will override color (regardless of order) */
+      /* Will override color (regardless of animal) */
       -webkit-text-stroke-width: .5px;
       -webkit-text-stroke-color: #fff; }
       .hero-wrap .slider-text h1 span {
