--- a/public/user/css/minhaconta/style.css
+++ b/public/user/css/minhaconta/style.css
@@ -472,7 +472,7 @@ strong{
 }
 .acc-content-column{
     flex-direction:column;
-    width:77%
+    width:100%
 }
 @media (max-width:767px){
     .acc-content-column{
@@ -566,21 +566,21 @@ strong{
         display:none
     }
 }
-.btn{
-    padding:12px 10px;
-    color:#fff;
-    border:none;
-    border-radius:4px;
-    /*background:#b7472a;*/
-    margin:5px;
-    font-size:14px;
-    box-shadow:2px 2px 7px #d2d1d1;
-    cursor:pointer;
-    /*text-transform:lowercase;*/
-    font-weight:400;
-    display:inline-block;
-    white-space:nowrap
-}
+/*.btn{*/
+/*    padding:12px 10px;*/
+/*    color:#fff;*/
+/*    border:none;*/
+/*    border-radius:4px;*/
+/*    !*background:#b7472a;*!*/
+/*    margin:5px;*/
+/*    font-size:14px;*/
+/*    box-shadow:2px 2px 7px #d2d1d1;*/
+/*    cursor:pointer;*/
+/*    !*text-transform:lowercase;*!*/
+/*    font-weight:400;*/
+/*    display:inline-block;*/
+/*    white-space:nowrap*/
+/*}*/
 @media (min-width:768px){
     .btn:hover{
         opacity:.7
@@ -855,8 +855,8 @@ strong{
 @media (min-width:768px){
     .acc-submenu{
         display:block;
-        position:-webkit-sticky;
-        position:sticky;
+        /*position:-webkit-sticky;*/
+        /*position:sticky;*/
         margin-bottom:1px;
         height:auto
     }
@@ -1006,7 +1006,6 @@ strong{
 }
 .acc-submenu-list{
     width:100%;
-    background:#fff;
     padding:20px 0;
     /*margin-bottom:15px;*/
     flex:1
@@ -1043,7 +1042,7 @@ strong{
         margin-right:10px
     }
     .acc-submenu-item:hover a{
-        color:#b7472a
+        color:#9e2e23
     }
     .acc-submenu-item:hover svg{
         fill:#b7472a
@@ -1158,7 +1157,7 @@ strong{
 .acc-order-card{
     display:flex;
     justify-content:center;
-    width:90%;
+    width:100%;
     align-self:start
 }
 @media (max-width:767px){
@@ -1326,7 +1325,7 @@ strong{
     }
 }
 .acc-delivery-cont-close .acc-order-product-image{
-    width:60px
+    width:80px
 }
 .acc-delivery-cont-close .acc-order-product-image>svg{
     width:60px;
@@ -1342,7 +1341,7 @@ strong{
 }
 @media (min-width:768px){
     .acc-delivery-cont-close .acc-order-product{
-        margin:20px 10px
+        margin:10px 10px
     }
 }
 .acc-delivery-cont-close .acc-order-product-link,.acc-delivery-cont-close .acc-order-product>a{
@@ -4052,7 +4051,7 @@ strong{
 }
 .acc-credit-card-delete-modal-header>h4{
     margin:0;
-    color:#EB592D;
+    color:#C0392B;
     font-weight:700;
     font-family:Arial,Helvetica,Verdana,sans-serif
 }
@@ -4087,7 +4086,7 @@ strong{
     padding:5px
 }
 .acc-notification-modal h3{
-    color:#EB592D;
+    color:#C0392B;
     text-transform:lowercase;
     margin:0;
     margin-bottom:30px;
@@ -4154,7 +4153,7 @@ strong{
 .acc-vouchers-container>header>div form>button>svg{
     height:20px;
     width:20px;
-    fill:#EB592D
+    fill:#C0392B
 }
 .acc-vouchers-select{
     width:100%;
@@ -4776,12 +4775,12 @@ strong{
 .acc-reviews-form-modal-image.error svg{
     width:30px;
     height:30px;
-    fill:#EB592D
+    fill:#C0392B
 }
 .acc-reviews-form-modal-image.success svg{
     width:30px;
     height:30px;
-    fill:#EB592D
+    fill:#C0392B
 }
 .acc-tracking{
     height:100%
@@ -4849,7 +4848,7 @@ strong{
         align-items:center
     }
     .acc-tracking-content-info svg{
-        fill:#EB592D;
+        fill:#C0392B;
         width:20px;
         height:20px
     }
@@ -4891,7 +4890,7 @@ strong{
     height:30px;
     margin-top:3px;
     margin-right:15px;
-    fill:#EB592D
+    fill:#C0392B
 }
 @media (max-width:767px){
     .acc-tracking-content-info-carrier-title>svg,.acc-tracking-content-info-tracking-code-title>svg{
@@ -4942,7 +4941,7 @@ strong{
 .acc-tracking-content-info-tracking-code-content div svg{
     width:15px;
     height:15px;
-    fill:#EB592D
+    fill:#C0392B
 }
 .acc-tracking-content-info-tracking-code-content div.place-bottom{
     height:30px;
@@ -4957,7 +4956,7 @@ strong{
 }
 .acc-tracking-content-info-tracking-code-data-link:hover{
     cursor:pointer;
-    color:#EB592D
+    color:#C0392B
 }
 .acc-tracking-content-prevision{
     margin:30px 0 20px -20px
@@ -5195,8 +5194,8 @@ strong{
     margin-right:15px;
     padding:12px;
     border-radius:50%;
-    fill:#EB592D;
-    border:2px solid #EB592D
+    fill:#C0392B;
+    border:2px solid #C0392B
 }
 .acc-exchange-item{
     width:90px;
@@ -5213,7 +5212,7 @@ strong{
     opacity:.3
 }
 .acc-exchange-item-image.selected{
-    border:3px solid #EB592D;
+    border:3px solid #C0392B;
     border-radius:5px;
     opacity:1
 }
@@ -5298,7 +5297,7 @@ strong{
 }
 .acc-exchange-step-label-number{
     color:#fff;
-    background-color:#EB592D;
+    background-color:#C0392B;
     font-size:16px;
     height:42px;
     width:42px;
@@ -5338,7 +5337,7 @@ strong{
 }
 .acc-exchange-refund{
     padding:20px;
-    border:1px solid #EB592D;
+    border:1px solid #C0392B;
     margin-top:15px
 }
 .acc-exchange-refund-name{
@@ -5351,7 +5350,7 @@ strong{
 }
 .acc-exchange-refund-value{
     font-size:18px;
-    color:#EB592D;
+    color:#C0392B;
     margin-left:5px
 }
 .acc-exchange-refund-original{
@@ -5615,7 +5614,7 @@ strong{
 }
 .acc-recovery.form-cards-content-selected{
     opacity:1!important;
-    box-shadow:0 0 5px #EB592D;
+    box-shadow:0 0 5px #C0392B;
     border-radius:3px
 }
 @media (max-width:767px){
@@ -5804,7 +5803,7 @@ strong{
     top: 0;
     right: 1px;
     font-size: 23px;
-    color: #EB592D
+    color: #C0392B
 }
 .acc-order-product .acc-order-product-truncate{
     width: 85%;
@@ -5813,10 +5812,10 @@ strong{
     width: 15%;
 }
 .acc-order-info-cont-delivered .acc-timeline-events-event.done .fill, .acc-order-info-cont-delivered .acc-timeline-progress-bar, .acc-order-info-cont-picked_up .acc-timeline-events-event.done .fill, .acc-order-info-cont-picked_up .acc-timeline-progress-bar, .acc-order-info-cont-warranty_issued .acc-timeline-events-event.done .fill, .acc-order-info-cont-warranty_issued .acc-timeline-progress-bar{
-    /*background-color: #EB592D;*/
+    /*background-color: #C0392B;*/
 }
 .acc-submenu-link.active{
-    color: #EB592D
+    color: #C0392B
 }
 .order-details .acc-order-header-icon{
     display: none;
@@ -5961,4 +5960,10 @@ h2.contact-title,
 #mark-rate .modal-body .row:last-of-type,
 #mark-rate .modal-body .row:first-of-type{
     border-bottom: 0px;
+}
+
+.main h4 {
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 20px;
 }
